@@ -1818,8 +1818,7 @@ expr_stmt|;
 block|}
 name|resultSetIterator
 operator|=
-operator|new
-name|ResultSetIterator
+name|createResultSetIterator
 argument_list|(
 name|query
 argument_list|)
@@ -1829,6 +1828,23 @@ name|resultSetIterator
 operator|.
 name|getIterator
 argument_list|()
+return|;
+block|}
+DECL|method|createResultSetIterator
+specifier|protected
+name|ResultSetIterator
+name|createResultSetIterator
+parameter_list|(
+name|String
+name|query
+parameter_list|)
+block|{
+return|return
+operator|new
+name|ResultSetIterator
+argument_list|(
+name|query
+argument_list|)
 return|;
 block|}
 DECL|method|logError
