@@ -3235,6 +3235,297 @@ block|}
 block|}
 annotation|@
 name|Test
+DECL|method|testEmptyResultSet
+specifier|public
+name|void
+name|testEmptyResultSet
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MockInitialContextFactory
+operator|.
+name|bind
+argument_list|(
+literal|"java:comp/env/jdbc/JndiDB"
+argument_list|,
+name|dataSource
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+name|JdbcDataSource
+operator|.
+name|JNDI_NAME
+argument_list|,
+literal|"java:comp/env/jdbc/JndiDB"
+argument_list|)
+expr_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|dataSource
+operator|.
+name|getConnection
+argument_list|()
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+name|connection
+argument_list|)
+expr_stmt|;
+name|jdbcDataSource
+operator|.
+name|init
+argument_list|(
+name|context
+argument_list|,
+name|props
+argument_list|)
+expr_stmt|;
+name|connection
+operator|.
+name|setAutoCommit
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|Statement
+name|statement
+init|=
+name|mockControl
+operator|.
+name|createMock
+argument_list|(
+name|Statement
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|connection
+operator|.
+name|createStatement
+argument_list|(
+name|ResultSet
+operator|.
+name|TYPE_FORWARD_ONLY
+argument_list|,
+name|ResultSet
+operator|.
+name|CONCUR_READ_ONLY
+argument_list|)
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+name|statement
+argument_list|)
+expr_stmt|;
+name|statement
+operator|.
+name|setFetchSize
+argument_list|(
+literal|500
+argument_list|)
+expr_stmt|;
+name|statement
+operator|.
+name|setMaxRows
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|statement
+operator|.
+name|execute
+argument_list|(
+literal|"query"
+argument_list|)
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|ResultSet
+name|resultSet
+init|=
+name|mockControl
+operator|.
+name|createMock
+argument_list|(
+name|ResultSet
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|statement
+operator|.
+name|getResultSet
+argument_list|()
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+name|resultSet
+argument_list|)
+expr_stmt|;
+name|ResultSetMetaData
+name|metaData
+init|=
+name|mockControl
+operator|.
+name|createMock
+argument_list|(
+name|ResultSetMetaData
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|resultSet
+operator|.
+name|getMetaData
+argument_list|()
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+name|metaData
+argument_list|)
+expr_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|metaData
+operator|.
+name|getColumnCount
+argument_list|()
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|resultSet
+operator|.
+name|next
+argument_list|()
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|resultSet
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|statement
+operator|.
+name|getMoreResults
+argument_list|()
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|statement
+operator|.
+name|getUpdateCount
+argument_list|()
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|statement
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|mockControl
+operator|.
+name|replay
+argument_list|()
+expr_stmt|;
+name|Iterator
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|>
+name|resultSetIterator
+init|=
+name|jdbcDataSource
+operator|.
+name|getData
+argument_list|(
+literal|"query"
+argument_list|)
+decl_stmt|;
+name|resultSetIterator
+operator|.
+name|hasNext
+argument_list|()
+expr_stmt|;
+name|resultSetIterator
+operator|.
+name|hasNext
+argument_list|()
+expr_stmt|;
+name|mockControl
+operator|.
+name|verify
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 annotation|@
 name|Ignore
 argument_list|(
